--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.TritonHacks24"
         tools:targetApi="31">
         <activity
+            android:name=".Unity"
+            android:exported="false" />
+        <activity
+            android:name=".Customize"
+            android:exported="false" />
+        <activity
+            android:name=".Challenges"
+            android:exported="false" />
+        <activity
+            android:name=".Habitat"
+            android:exported="false" />
+        <activity
+            android:name=".Home2"
+            android:exported="false" />
+        <activity
+            android:name=".Adoption"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
